src/tests/commands/snapshots/package_manager_detector_rs__tests__commands__npm_run__deno_run_multiple_argument.snap
---
source: src/tests/commands/npm_run.rs
expression: output
snapshot_kind: text
---
[
    "deno",
    "run",
    "npm:arg0",
    "arg1-0",
    "arg1-1",
]
