src/tests/commands/snapshots/package_manager_detector_rs__tests__commands__npm_run__npm_multiple_arguments.snap
---
source: src/tests/commands/npm_run.rs
expression: output
snapshot_kind: text
---
[
    "npm",
    "run",
    "test",
    "--",
    "unit",
    "--watch",
]
