src/tests/commands/snapshots/package_manager_detector_rs__tests__commands__npm_run__yarn_single_argument.snap
---
source: src/tests/commands/npm_run.rs
expression: output
snapshot_kind: text
---
[
    "yarn",
    "run",
    "build",
]
